Updated footer and added Business.sa info

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -47,6 +47,7 @@
     "success-description": ".شكرًا لتواصلك معنا! سنعود إليك في أقرب وقت ممكن",
     "oops": "!عذرًا",
     "email-error": ".يرجى إدخال بريد إلكتروني صالح",
-    "phone-error": ".يرجى إدخال رقم هاتف صالح"  
+    "phone-error": ".يرجى إدخال رقم هاتف صالح",
+    "cr-label": "رقم التوثيق: "
   }
 }
