--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -47,6 +47,7 @@
     "success-description": "Thank you for reaching out! We will get back to you as soon as possible.",
     "oops": "Oops!",
     "email-error": "Please enter a valid email address.",
-    "phone-error": "Please enter a valid phone number."
+    "phone-error": "Please enter a valid phone number.",
+    "cr-label": "Cr-Number:"
   }
 }
