Added Odoo Page in navigation and navbar and created initial landing page for Odoo

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -2,6 +2,7 @@
   "Landing": {
     "home": "الرئيسية",
     "about": "من نحن",
+    "Odoo": "أودو ",
     "services": "الخدمات",
     "contact": "تواصل",
     "contact-us": "تواصل معنا الآن",
@@ -48,6 +49,7 @@
     "oops": "!عذرًا",
     "email-error": ".يرجى إدخال بريد إلكتروني صالح",
     "phone-error": ".يرجى إدخال رقم هاتف صالح",
-    "cr-label": "رقم التوثيق: "
+    "cr-label": "رقم التوثيق: ",
+    "odoo-erp-title": "برنامج إدارة موارد المؤسسة"
   }
 }
