--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -2,6 +2,7 @@
   "Landing": {
     "home": "Home",
     "about": "Projects",
+    "Odoo": "Odoo",
     "services": "Services",
     "contact": "Contact",
     "contact-us": "Contact us now!",
@@ -48,6 +49,9 @@
     "oops": "Oops!",
     "email-error": "Please enter a valid email address.",
     "phone-error": "Please enter a valid phone number.",
-    "cr-label": "Cr-Number:"
+    "cr-label": "Cr-Number:",
+    "odoo-erp-title": "ERP",
+    "Odoo-description": "All in one enterprise services platform",
+    "odoo-erp-description": "Enterprise Resource Planning"
   }
 }
