Updated Projects secction and footer color to gradient

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -26,8 +26,8 @@
     "maintenance-description": "We provide maintenance services to clients beyond project completion. Also, to those who have already products and need enhancement.",
     "about-title": "Projects",
     "about-subtitle": "Will be here soon...",
-    "about-us-title": "This page is under construction...",
-    "about-us-description": "This page is under construction...",
+    "about-us-title": "This component is under construction...",
+    "about-us-description": "This component is under construction...",
     "footer-title": "Try Cyber Pilot and see how creative our solutions can be...",
     "copyright": "© 2024. All rights reserved.",
     "contact-title": "Get In Touch",
