Removed Contact Page and an redirected Contact Us buttons to WhatsApp

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -43,7 +43,7 @@
     "error-empty-title": ".عذرًا! يبدو أنك نسيت شيئًا",
     "error-empty-description": ".يرجى ملء جميع الحقول المطلوبة قبل إرسال رسالتك",
     "error-title": ".عذرًا! حدث خطأ ما",
-    "error-description": "digitalgate@gmail.com يرجى المحاولة مرة أخرى أو التواصل معنا مباشرة عبر البريد الإلكتروني",
+    "error-description": " يرجى المحاولة مرة أخرى أو التواصل معنا مباشرة عبر البريد الإلكتروني",
     "success-title": "!تم إرسال رسالتك",
     "success-description": ".شكرًا لتواصلك معنا! سنعود إليك في أقرب وقت ممكن",
     "oops": "!عذرًا",
