--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -43,7 +43,7 @@
     "error-empty-title": "Oops! Sounds like you missed something.",
     "error-empty-description": "Please fill out all the required fields before sending your message.",
     "error-title": "Oops! Something went wrong.",
-    "error-description": "Please try again or contact us directly at digitalgate@gmail.com",
+    "error-description": "Please try again or contact us directly at ",
     "success-title": "Your message has been sent!",
     "success-description": "Thank you for reaching out! We will get back to you as soon as possible.",
     "oops": "Oops!",
