--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -6,7 +6,7 @@
     "services": "الخدمات",
     "contact": "تواصل",
     "contact-us": "تواصل معنا الآن",
-    "title": "Cyber Pilot",
+    "title": "Code Pilot",
     "header-title": "!طريقك نحو الثورة الرقمية يبدأ هنا",
     "header-description": "نسعى لتمكين الشركات بحلول مبتكرة تدفعها إلى آفاق جديدة من النجاح",
     "header-button": "تواصل معنا الآن!",
