--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -6,7 +6,7 @@
     "services": "Services",
     "contact": "Contact",
     "contact-us": "Contact us now!",
-    "title": "Cyber Pilot",
+    "title": "Code Pilot",
     "header-title": "Your Path To A Digital Revolution Starts Here!",
     "header-description": "We strive to empower businesses with cutting-edge solutions, propelling them to new heights of success.",
     "header-button": "Contact us now!",
@@ -28,7 +28,7 @@
     "about-subtitle": "Projects we have made with love❤️...",
     "about-us-title": "This component is under construction...",
     "about-us-description": "This component is under construction...",
-    "footer-title": "Try Cyber Pilot and see how creative our solutions can be...",
+    "footer-title": "Try Code Pilot and see how creative our solutions can be...",
     "copyright": "© 2024. All rights reserved.",
     "contact-title": "Get In Touch",
     "contact-description": "Reach out, and let's create a universe of possibilities together!",
