--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -5,13 +5,14 @@
     "Odoo": "Odoo",
     "services": "Services",
     "contact": "Contact",
-    "contact-us": "Contact us now!",
+    "contact-us": "Book a Call ",
     "title": "Code Pilot",
     "header-title": "Your Path To A Digital Revolution Starts Here!",
+    "Starts Here!": "Starts Here!",
     "header-description": "We strive to empower businesses with cutting-edge solutions, propelling them to new heights of success.",
-    "header-button": "Contact us now!",
-    "services-title": "Our Services",
-    "services-description": "We Offer Full Stack Development For Digital Innovation",
+    "header-button": "Book a Call",
+    "services-title": "What We Offer",
+    "services-description": "From idea to launch—we craft, build, and grow your digital products.",
     "ui-ux-title": "UI/UX Design",
     "ui-ux-description": "Design experiences, not just interfaces, Our UI/UX service brings your digital products to life!",
     "mobile-title": "IOS & Android",
